<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red"
    tools:context=".RealtimeActivity">

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/_00_00"
        android:textColor="@android:color/black"
        android:textSize="60sp" />

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/home"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button"
        android:layout_width="179dp"
        android:layout_height="68dp"
        android:layout_below="@+id/button_start_pause"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/yellow"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="85dp"
        android:text="@string/cylinder_info"
        android:textAllCaps="false"/>

</RelativeLayout>